2006-11-14  Per Bothner  <per@bothner.com>

	* TreeList.java (writeJoiner): Make public.

	* TreeList.java (dump): Write identityHashCode in hex.

2006-11-13  Per Bothner  <per@bothner.com>

	* PairWithPosition.java: Implement SourceLocation.
	(position): Change interpretation.

	* PrintConsumer.java (endNumber): New method, to be overridden.
	(writeFloat, writeDouble, writeInt, writeLong): Call endNumber.

2006-11-09  Per Bothner  <per@bothner.com>

	* Consumer.java (beginGroup, endGroup): Remove typeName parameter.
	(beginAttribute): Remove attrName parameter.
	* PrintConsumer.java: Update for Consumer changes
	* TreeList.java: Likewise.
	(find(Object,Object)): Removed.
	*getNextTypeName): Since we don't store group/attribute String names
	any more, change to just do toString of getNextTypeObject.
	(getNextTypeIndex): Now just inline in getNextTypeObject.
	* AbstractFormat.java: Update for Consumer changes
	* LList.java: Likewise.
	* FVector.java: Likewise.
	* NamedChildrenFilter.java: Likewise.
	* FilterConsumer.java: Likewise.
	(attributeName): Remove no-longer-needed field.

2006-11-05  Per Bothner  <per@bothner.com>

	* TreeList.java (MAX_CHAR_SHORT): Make public.
	(stringValue):  New method.

2006-10-26  Per Bothner  <per@bothner.com>

	* TreeList.java (setGroupName): Now also works when the gruupIndex
	is a BEGIN_GROUP_LONG, as it is when called from NodeTree.
	(BEGIN_ATTRIBUTE_LONG_SIZE, END_ATTRIBUTE_SIZE): New fields.

2006-10-24  Per Bothner  <per@bothner.com>

	* TreeList.java (currentParent): Initial value should be -1,
	(BEGIN_ENTITY, BEGIN_DOCUMEMT): Clarify parent_offset semantics.
	(beginEntity, endEntity, beginDocument, endDocument, parentOrEntityI):
	Fix accordingly.
	(endDocument, endEntity): Add sanity checks.
	(posToDataIndex): Fix ipos/index confusion and lack of updating.
	(dump): Print raw parent offset for BEGIN_DOCUMENT/BEGIN_ENTITY.

2006-10-22  Per Bothner  <per@bothner.com>

	* XConsumer.java (writeBaseUri): Remove method.